fix(ww): tweak lightbox z-index, eki-link logic

--- a/wordweb-app/src/main/resources/view/css/styles.css
+++ b/wordweb-app/src/main/resources/view/css/styles.css
@@ -13959,6 +13959,12 @@ body.hidden-scroll {
     opacity: 0;
   }
 }
+.sl-wrapper {
+  z-index: calc(var(--header-z-index) + 2);
+}
+.sl-overlay {
+  z-index: calc(var(--header-z-index) + 1);
+}
 .homonym-item-wrap {
   display: block;
   transition: 0ms !important;
